--- a/tox.ini
+++ b/tox.ini
@@ -10,9 +10,9 @@ python =
 [testenv]
 deps =
   pytest
-  pytest-cov
+  coverage
   python{3.9,3.10,3.11}: ipython
-commands = pytest --cov --cov-report=term-missing --cov-config setup.cfg {posargs}
+commands = coverage run --rcfile=setup.cfg --branch -m pytest {posargs}
 depends =
     python{3.9,3.10,3.11}: coverage-clean
     coverage-report: python{3.9,3.10,3.11}
