--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,9 @@ deps =
   pytest
   coverage
   python{3.9,3.10,3.11}: ipython
-commands = coverage run --rcfile=setup.cfg --branch -m pytest {posargs}
+commands =
+    clo --demo --out .clorc
+    coverage run --rcfile=setup.cfg --branch -m pytest {posargs} -v
 depends =
     python{3.9,3.10,3.11}: coverage-clean
     coverage-report: python{3.9,3.10,3.11}
