add actions; run tests for 3.8 & 3.12

--- a/tox.ini
+++ b/tox.ini
@@ -1,23 +1,25 @@
 [tox]
-envlist = lint,python{3.9,3.10,3.11},manifest,coverage-report
+envlist = lint,python{3.8,3.9,3.10,3.11,312-dev},manifest,coverage-report
 
 [gh-actions]
 python =
+  3.8: py39
   3.9: py39
   3.10: py310
   3.11: py311, lint, manifest
+  3.12-dev: py312-dev
 
 [testenv]
 deps =
   pytest
   coverage
-  python{3.9,3.10,3.11}: ipython
+  python{3.8,3.9,3.10,3.11,312-dev}: ipython
 commands =
     clo --demo --out .clorc
     coverage run --rcfile=setup.cfg --branch -m pytest {posargs} -v
 depends =
-    python{3.9,3.10,3.11}: coverage-clean
-    coverage-report: python{3.9,3.10,3.11}
+    python{3.9,3.10,3.11,312-dev}: coverage-clean
+    coverage-report: python{3.8,3.9,3.10,3.11,312-dev}
 
 [testenv:lint]
 skip_install = true
