--- a/requirements-docs.txt
+++ b/requirements-docs.txt
@@ -1,5 +1,5 @@
-mdx_truly_sane_lists~=1.2
-mkdocs-include-markdown-plugin~=3.3.0
-mkdocs-material~=8.2.9
-mkdocstrings[python]~=0.18.1
-mkdocs~=1.3.0
+mdx_truly_sane_lists
+mkdocs-include-markdown-plugin
+mkdocs-material>=9.4.6
+mkdocstrings[python]>=0.5.0
+mkdocs>=0.23.0
