address pipeline test issues

--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,7 @@ deps =
   coverage
   python{3.8,3.9,3.10,3.11,312-dev}: ipython
 commands =
+    touch .clorc
     clo --demo --out .clorc
     coverage run --rcfile=setup.cfg --branch -m pytest {posargs} -v
 depends =
