address pipeline issue

--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,7 @@ deps =
   pytest
   coverage
   python{3.8,3.9,3.10,3.11,312-dev}: ipython
+allowlist_externals = touch
 commands =
     touch .clorc
     clo --demo --out .clorc
