scale support all the way back...

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = lint,python{3.10,3.11,3.12-dev},manifest,coverage-report
+envlist = lint,python{3.10},manifest,coverage-report
 
 [gh-actions]
 python =
@@ -11,15 +11,15 @@ python =
 deps =
   pytest
   coverage
-  python{3.10,3.11,3.12-dev}: ipython
+  python{3.10}: ipython
 allowlist_externals = touch
 commands =
     touch .clorc
     clo --demo --out .clorc
     coverage run --rcfile=setup.cfg --branch -m pytest {posargs} -v
 depends =
-    python{3.10,3.11,3.12-dev}: coverage-clean
-    coverage-report: python{3.10,3.11,3.12-dev}
+    python{3.10}: coverage-clean
+    coverage-report: python{3.10}
 
 [testenv:lint]
 skip_install = true
