--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-        python-version: ["3.10", "3.11", "3.12-dev"]
+        python-version: ["3.10"]
 
     steps:
     - uses: actions/checkout@v3
