--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,11 +7,11 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     strategy:
-      max-parallel: 8
+      max-parallel: 1
       matrix:
         os:
           - ubuntu-latest
-        python-version: ["3.11"]
+        python-version: ["3.10", "3.11", "3.12-dev"]
 
     steps:
     - uses: actions/checkout@v3
