add dependabot & coverage badge

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = lint,py{3.10,3.11,3.12-dev},manifest,coverage-report
+envlist = lint,py{3.10,3.11,3.12-dev},manifest,coverage-report,coverage-badge
 
 [gh-actions]
 python =
@@ -43,3 +43,8 @@ deps = coverage
 skip_install = true
 commands =
   coverage report
+
+[testenv:coverage-badge]
+deps = coverage-badge
+commands =
+  coverage-badge -f -o docs/assets/images/coverage.svg
