--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,14 +3,19 @@ repo_url: https://github.com/LeShaunJ/clo
 edit_uri: ""
 theme:
   name: material
+  custom_dir: overrides
   palette:
-    primary: green
+    primary: 714B67
+  favicon: assets/images/favicon.png
   features:
     - toc.follow
+    - navigation.tabs
     - navigation.sections
 
 markdown_extensions:
   - mdx_truly_sane_lists
+  - toc:
+      toc_depth: 4
 
 plugins:
   - mkdocstrings:
