--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,8 @@ include LICENSE *.md *.yml *.toml
 
 include tox.ini
 recursive-include docs *.md
+recursive-include docs *.png
+recursive-include docs *.svg
 recursive-include tests *.py
 
 include .bumpversion.cfg
