--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,8 @@
 include LICENSE *.md *.yml *.toml
 
 include tox.ini
+include Makefile
+
 recursive-include docs *.md
 recursive-include docs *.png
 recursive-include docs *.svg
