--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ deps =
 allowlist_externals = touch
 commands =
     touch .clorc
-    clo --demo --out .clorc
+    clo --demo
     coverage run --rcfile=setup.cfg --branch -m pytest {posargs} -v
 depends =
     python{3.10,3.11,3.12-dev}: coverage-clean
