--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,6 +5,7 @@ include Makefile
 
 recursive-include docs *.md
 recursive-include docs *.png
+recursive-include docs *.ico
 recursive-include docs *.svg
 recursive-include tests *.py
 
