--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,17 +1,18 @@
 include LICENSE *.md *.yml *.toml
 
-include tox.ini
 include Makefile
+include tox.ini
 
+recursive-include docs *.css
+recursive-include docs *.ico
 recursive-include docs *.md
 recursive-include docs *.png
-recursive-include docs *.ico
 recursive-include docs *.svg
 recursive-include tests *.py
 
 include .bumpversion.cfg
 include .coveragerc
 include .editorconfig
-include requirements.txt
 include requirements-docs.txt
+include requirements.txt
 include src/clo/py.typed
